Terminer mes methodes de controller de SupplierÃ